# Strands-RAG-Mongodb

./: .env.example  .gitignore  ARCHITECTURE.md  QUICKSTART.md  README.md  api.py  main.py  pyproject.toml  requirements.txt
agent/: __init__.py  malaysian_food_agent.py
data/: __init__.py  malaysian_dishes.py
scripts/: seed_database.py
services/: __init__.py  bedrock.py  mongodb.py
skills/: __init__.py  food_knowledge_skill.py  restaurant_finder_skill.py
