[project]
name = "malaysian-food-place-agent"
version = "1.0.0"
description = "Malaysian food place recommendation agent using Strands, AWS Bedrock, MongoDB Vector Search, and MCP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.35.0",
    "pymongo>=4.10.0",
    "strands>=0.1.0",
    "mcp>=0.9.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
